--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -2,8 +2,8 @@
 ========================================================================== */
 
 /**
-To change or override any style, add a new scss file under ./custom/ directory
+To change or override any style, add a new scss file under `custom` directory (current directory),
 and include it here.
  */
 //my-new-custom-style style:
-//@import "custom/my-new-custom-style";
+//@import "./my-new-custom-style";
